lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-services
spec:
  tls:
    - hosts:
        - kube.example.test
      secretName: ingress-tls
  rules:
    - host: kube.example.test
      http:
        paths:
          - pathType: Prefix
            path: /react
            backend:
              service:
                name: react-np
                port:
                  number: 80
